<resources>
    <string name="app_name">SnapTalk</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="menu_chatroom">聊天室</string>
    <string name="menu_friend">朋友</string>
    <string name="menu_profile">個人檔案</string>
    <string name="send_message">傳送</string>
    <string name="menu_gallery">gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_contact_search">請輸入帳號進行搜尋</string>
    <string name="search">搜尋</string>
    <string name="search_failed">搜尋無此人</string>
    <string name="search_success">搜尋成功</string>
    <string name="add_contact_success">加入成功</string>
    <string name="add_contact_failed">已經是好友！</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_confirmPassword">Password must be the same</string>
    <string name="invalid_email">Invalid email(email is optional)</string>
    <string name="login_failed">"Invalid password or no such username."</string>
    <string name="login_success">"Login success, welcome !"</string>
    <string name="signup_success">"Sign-up success, welcome !"</string>
    <string name="signup_failed">"Username has been used."</string>
    <string name="delete_contact">刪除好友</string>
    <string name="important_contact">重要好友</string>
    <string name="profile_avatar_hint">YOUR AVATAR URL</string>
    <string name="profile_name_hint">YOUR NAME</string>
    <string name="profile_email_hint">YOUR EMAIL</string>
    <string name="profile_profile_hint">YOUR PROFILE</string>
    <string name="profile_modify_success">修改成功！</string>
    <string name="profile_modify_fail">修改失敗！</string>
</resources>