<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.snapchat.ui.home.HomeFragment"
        android:label="@string/menu_chatroom"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.snapchat.ui.contact.ContactFragment"
        android:label="@string/menu_friend"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.snapchat.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_slideshow" />
</navigation>